--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ChrisReformado.github.io/your-repo-name",
+  "homepage": "https://ChrisReformado.github.io/ws101-reformado-navbar",
   "name": "my-first-react",
   "version": "0.1.0",
   "private": true,
